[package]
name = "framous"
version = "0.1.3"
edition = "2021"
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "A library sending and receiving packets to and from a Reader/Writer"
readme = "./README.md"
documentation = "https://docs.rs/framous"
homepage = "https://github.com/GeoffClements/framous"
repository = "https://github.com/GeoffClements/framous"
license = "MIT"
categories = ["encoding", "network-programming"]
keywords = ["networking", "protocol", "framing", "bytes", "packets"]

[dependencies]
bytes = "1.4.0"

[dev-dependencies]
socket-server-mocker = "0.0.4"
