[package]
name = "framous"
version = "0.1.8"
edition = "2021"
authors = ['Geoff Clements <ro2kz0@gmail.com>']
description = "A library for sending and receiving packets to and from a Reader/Writer"
readme = "./README.md"
documentation = "https://docs.rs/framous"
homepage = "https://github.com/GeoffClements/framous"
repository = "https://github.com/GeoffClements/framous"
license = "MIT"
categories = ["encoding", "network-programming"]
keywords = ["networking", "protocol", "framing", "bytes", "packets"]

[dependencies]
bytes = "1.10.1"

[dev-dependencies]
socket-server-mocker = "0.5.0"
